src/styles/styles.css
/* FONTS */
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');

/* GLOBAL ELEMENTS */
* {
    box-sizing: border-box;
    outline: none;
}

:root {
    --body-font: "Poppins", sans-sefir;
}

html {
    box-sizing: border-box;
}

body {
    font-family: var(--body-font);
    background-image: url(/src/images/light-background-image.jpeg);
    background-size: cover;
    background-position: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 2em;
    width: 100%;
    height: 100vh;
}

/* BACKGROUND */

.video-bg {
    position: fixed;
    right: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.video-bg video {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.img {
    max-width: 100%;
}


/* APP SECTION*/
.app {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    max-width: 1280px;
    max-height: 900px;
    height: 90vh;
    width: 100%;
    border-radius: 14px;
    position: relative;
    z-index: 1;
    overflow: hidden;
    box-shadow: 0px 0px 1px 1px rgba(255, 255, 255, 0.3);
}

/* LINKS */
a {
    text-decoration: none;
    color: inherit;
}

/* APP HEADER */
.header {
    height: 3.625rem;
    display: flex;
    flex-wrap: nowrap;
    align-items: center;
    flex-shrink: 0;
    padding: 0 30px;
    white-space: nowrap;
    background: rgba(255, 255, 255, 0.25);
    -webkit-backdrop-filter: blur(10px);
	backdrop-filter: blur(20px);
    border-radius: 14px 14px 0 0;
    border-bottom: 1px solid whitesmoke;
}

.header-links {
    display: flex;
    justify-content: center;
    align-items: center;
}

.header-links a {
    display : inline-block;
    vertical-align : middle;
    line-height : 20px;
}


.wrapper {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
}

.left-nav {
    display: flex;
    align-items: flex-start;
    width: 20%;
    height: 100%;
    background: rgba(255, 255, 255, .25);
    -webkit-backdrop-filter: blur(10px);
	backdrop-filter: blur(10px);
    overflow: auto;
    flex-wrap: nowrap;
}

.left-wrapper {
    margin: 0 auto;
    height: 100%;
    width: 80%;
    padding-bottom: 1em;
}

.left-wrapper > div {
    margin-top: 2em;
}

.today {
    width: 100%;
}

.left-header {
    font-weight: bold;
    font-size: 18px;
    margin-bottom: 0.5em;
}

.left-btn {
    font-weight: 400;
    font-size: 16px;
    display: flex;
    justify-content: flex-start;
    max-width: 100%;
    border-radius: 5px;
    padding: 8px 0px; 
}

.left-btn i {
    font-size: 14px;
    padding-right: 0.45em;
    padding-left: 0.45em;
}

.left-btn span {
    display: inline-block;
    border-radius: 50%;
    width: 18px;
    height: 18px;
    text-align: center;
    padding-top: 1px;
    margin-left: 40%;
    color: white;
    font-size: 15px;
    background-color: rgb(25, 0, 255);
}

.left-btn:hover {
    background: rgba(255, 255, 255, .3);
    -webkit-backdrop-filter: blur(10px);
	backdrop-filter: blur(10px);
    cursor: pointer;
}


/* MAIN */
.main {
    width: 80%;
    height: 100%;
    background: rgba(255, 255, 255, 0.4);
    -webkit-backdrop-filter: blur(10px);
	backdrop-filter: blur(10px);
    border-left: 1px solid whitesmoke;
}

/* MEDIA */

@media screen and (max-width: 480px) {
    body {
        padding: 0.8em;
    }
}

@media screen and (max-width: 768px) {
    .video-bg {
        display: none;
    }

    body {
        width: 100%;
        height: 100vh;
    }

    .app {
        height: 100vh;
        width: 100%;
    }

    .left-nav {
        display: none;
    }

    .main {
        width: 100%;
    }
}

